<resources>
    <string name="app_name">Open Ears</string>
    <string name="titleCredits">made by shenxy13</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="have_account">Already have an account?</string>
    <string name="confirm">Confirm Password</string>
    <string name="somethingwrong">Task failed successfully</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_organisation">Add Organisation</string>
    <string name="organisation_name">Organisation Name</string>
    <string name="org_desc">Organisation Description</string>
    <string name="add_icon">Add Icon and Create</string>
    <string name="create_organisation">Create Organisation</string>
    <string name="back">Back</string>
    <string name="owner_id" translatable="false">J5lKPv8EiRdNt46J67A5Ho7ECEv2</string>
    <string name="org_exists">Organisation already exists</string>
    <string name="join_organisation">Join Organisation</string>
    <string name="preview_organisation">Preview Organisation</string>
    <string name="org_hidden">Organisation is hidden/does not exist</string>
    <string name="about_this_app">About This App</string>
    <string name="about_app_1">This app was developed as a demonstration of how a feedback system could feasibly represent the opinions of the people while filtering out unpopular and unhelpful content efficiently. The app designer intended it to help organisations manage their feedback.</string>
    <string name="about_app_2">Or was it?</string>
    <string name="about_app_3">Some unfounded rumours allege that the developer of this app is strongly critical of many existing feedback systems, and that this app is intended to be a parody of them. Certainly, it is no coincidence that the app demonstrates how may organisations pull the strings to manipulate feedback, hearing only what they want to hear.</string>
    <string name="about_app_4">The app designer would like to remind people that this is just a rumour. He is not an anarcho-communist looking to overthrow all existing organisations.</string>
    <string name="about_the_dev">About The Dev</string>
    <string name="about_dev_1">Name: Shen Xing Yang (aka shenxy13)</string>
    <string name="about_dev_2">Class: M20404</string>
    <string name="about_dev_3">School: NUS High School</string>
    <string name="about_dev_4">Hobbies: Tormenting people, tormenting myself</string>
    <string name="about_dev_5">Hates: Authority, boredom, humans, self</string>
    <string name="about_dev_6">Political Affiliation: Chaos</string>
    <string name="about_dev_7">Contact Email: </string>
    <string name="more_info">More Info</string>
    <string name="dev_email" translatable="false">shenxingyang@gmail.com</string>
    <string name="git_gud" translatable="false">Git gud</string>
    <string name="settings">Settings</string>
    <string name="view_suggestions">View Suggestions</string>
    <string name="view_feedback">View Feedback</string>
    <string name="view_polls">View Polls</string>
    <string name="leave_org">Leave Organisation</string>
    <string name="leave_confirm">Are you sure you want to leave?</string>
    <string name="irreversible_warning">This action is irreversible.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="user_name">User Name</string>
    <string name="owner">Owner</string>
    <string name="admin">Administrator</string>
    <string name="member">Member</string>
    <string name="update_settings">Update Settings</string>
    <string name="username_empty">Username cannot be empty!</string>
    <string name="updated_settings">Settings Updated</string>
    <string name="list_members">List Members</string>
    <string name="admin_page">Admin Page</string>
    <string name="show_contribution">Contribution: </string>
    <string name="add_poll">Add Poll</string>
    <string name="question">Question</string>
    <string name="add_option">Add Option</string>
    <string name="remove_option">Remove Option</string>
    <string name="poll_option">Option </string>
    <string name="empty_error">Field cannot be empty</string>
    <string name="add_feedback">Add Feedback</string>
    <string name="add_image">Add Image</string>
    <string name="remove_image">Remove Image</string>
    <string name="feedback_text">Feedback Text</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="upvote">Upvote</string>
    <string name="downvote">Downvote</string>
    <string name="vote_on_root">Cannot vote on root</string>
    <string name="view_profile">View Profile</string>
    <string name="add_suggestion">Add Suggestion</string>
    <string name="submit_suggestion">Submit Suggestion</string>
    <string name="suggestion_text">Suggestion Text</string>
    <string name="in_consideration">In Consideration</string>
    <string name="view_considered_suggestions">View Considered Suggestions</string>
    <string name="publicly_visible">Publicly Visible: </string>
    <string name="update_data">Update Data</string>
    <string name="emails">Emails</string>
    <string name="add_users_with_email">Add Users</string>
    <string name="email_example">Eg. xy@ymail.com abc@xyzmail.com</string>
    <string name="user_not_exist">User does not exist</string>
    <string name="private_score">Private Score</string>
    <string name="update_private_score">Update Private Score</string>
    <string name="promote_to_owner">Promote To Owner</string>
    <string name="promote_to_admin">Promote To Admin</string>
    <string name="demote_to_member">Demote To Member</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="user_settings">User Settings</string>
    <string name="insufficient_permissions">Insufficient permissions to perform action</string>
    <string name="already_admin">User is already admin</string>
    <string name="demote_owner">Cannot demote owner</string>
    <string name="image_not_work">Image features may not work</string>
</resources>