<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutAppActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/aboutappbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:textColor="@color/colorText"
            android:textSize="40sp"
            android:textAlignment="center"
            android:text="@string/about_this_app"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:text="@string/about_app_1"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:text="@string/about_app_2"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:text="@string/about_app_3"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textColor="@color/colorText"
            android:textSize="15sp"
            android:text="@string/about_app_4"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>