<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/colorBackground">
    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <EditText
            android:id="@+id/registeremail"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:hint="@string/email"
            android:ems="8"
            android:textAlignment="center"
            android:inputType="textEmailAddress"/>
        <EditText
            android:id="@+id/registerpassword"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:hint="@string/password"
            android:ems="8"
            android:textAlignment="center"
            android:inputType="textPassword"/>
        <EditText
            android:id="@+id/registerconfirm"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorText"
            android:hint="@string/confirm"
            android:ems="8"
            android:textAlignment="center"
            android:inputType="textPassword"/>
        <Button
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/register"
            android:onClick="register"/>
    </TableLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:text="@string/have_account"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:textColor="@color/colorText"
            android:text="@string/sign_in"
            android:onClick="goToSignIn"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>