<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminUserActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/adminuserbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/adminuserbar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView
            android:id="@+id/adminusername"
            android:textColor="@color/colorText"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/adminuserperm"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorText"
            android:textSize="20sp"/>
        <LinearLayout>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sesamescore"
                android:layout_marginTop="10dp"
                android:hint="@string/private_score"
                android:textSize="20sp"
                android:inputType="numberSigned"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:background="@color/colorBackground"/>
            <Button
                android:id="@+id/opensesame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/update_private_score"
                android:onClick="updateSesame"/>
        </LinearLayout>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/promote_to_owner"
            android:onClick="promoteToOwner"/>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/promote_to_admin"
            android:onClick="promoteToAdmin"/>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/demote_to_member"
            android:onClick="demoteToUser"/>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/remove_from_group"
            android:onClick="removeFromGroup"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>