<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminViewActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/adminviewbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/adminviewdesc"
                android:hint="@string/org_desc"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:background="@color/colorBackground"/>
            <LinearLayout>
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorText"
                    android:text="@string/publicly_visible"
                    android:textSize="20sp"/>
                <Switch
                    android:id="@+id/adminviewpublic"
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorButtons"
                    android:checked="false"/>
            </LinearLayout>
            <Button
                android:layout_marginTop="10dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/update_data"
                android:onClick="updateData"/>
            <EditText
                android:id="@+id/useremails"
                android:hint="@string/emails"
                android:layout_marginTop="20dp"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:background="@color/colorBackground"/>
            <Button
                android:layout_marginTop="5dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/add_users_with_email"
                android:onClick="addUsers"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText"
                android:text="@string/email_example"
                android:textSize="15sp"/>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>