<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateOrganisationActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/createorgbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/createorgname"
                android:hint="@string/organisation_name"
                android:textSize="40sp"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="@color/colorText"
                android:textColor="@color/colorText"
                android:background="@color/colorBackground"/>
            <EditText
                android:id="@+id/createorgdesc"
                android:layout_marginTop="10dp"
                android:hint="@string/org_desc"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:background="@color/colorBackground"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/add_icon"
                android:onClick="createOrgWithIcon"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/create_organisation"
                android:onClick="createOrgWithoutIcon"/>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>