<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSuggestionActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/addsuggestionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/addsuggestiontext"
                android:layout_marginTop="10dp"
                android:hint="@string/suggestion_text"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorText"
                android:background="@color/colorBackground"/>
            <TableLayout
                android:id="@+id/addsuggestionimages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/add_image"
                android:onClick="addImageToSuggestion"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/remove_image"
                android:onClick="removeImageFromSuggestion"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/submit_suggestion"
                android:onClick="submitSuggestion"/>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>