<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/homebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/hometitle"
                android:textColor="@color/colorText"
                android:textSize="40sp"
                android:textAlignment="center"/>
            <ImageView
                android:id="@+id/homeimage"
                android:layout_width="match_parent"
                android:scaleType="centerInside"/>
            <TextView
                android:id="@+id/homesubtitle"
                android:textColor="@color/colorText"
                android:textSize="15sp"
                android:layout_marginTop="10dp"/>
            <Button
                android:layout_marginTop="20dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/view_suggestions"
                android:onClick="goToSuggestionsRoot"/>
            <Button
                android:layout_marginTop="10dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/view_feedback"
                android:onClick="goToFeedbackRoot"/>
            <Button
                android:layout_marginTop="10dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/view_polls"
                android:onClick="goToPollsList"/>
            <Button
                android:layout_marginTop="10dp"
                android:background="@color/colorButtons"
                android:textColor="@color/colorBackground"
                android:text="@string/leave_org"
                android:onClick="leaveCurrentOrganisation"/>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>