<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorBackground">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/settingsbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorAppBar"/>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@+id/settingsbar">
        <EditText
            android:id="@+id/settingsname"
            android:hint="@string/user_name"
            android:textSize="20sp"
            android:inputType="text"
            android:textColorHint="@color/colorText"
            android:textColor="@color/colorText"
            android:background="@color/colorBackground"/>
        <TextView
            android:id="@+id/settingstype"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <TextView
            android:id="@+id/settingsscore"
            android:textColor="@color/colorText"
            android:textSize="20sp"
            android:layout_marginTop="10dp"/>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/update_settings"
            android:onClick="updateSettings"/>
        <Button
            android:layout_marginTop="10dp"
            android:background="@color/colorButtons"
            android:textColor="@color/colorBackground"
            android:text="@string/view_profile"
            android:onClick="viewProfile"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>